--- a/styles/product.css
+++ b/styles/product.css
@@ -167,18 +167,13 @@
 
 .main main .description-and-specifications .description p {
   color: gray;
-  max-height: 80px;
   overflow: hidden;
   padding: 5px;
   transition: all .75s;
 }
 
-.main main .description-and-specifications .description p.open {
-  max-height: 1000px;
-}
-
 .main main .description-and-specifications .description button.show-more-btn {
-  display: flex;
+  display: none;
   align-items: center;
   justify-self: center;
   background-color: transparent;
@@ -287,5 +282,14 @@
     padding: 20px;
     position: sticky;
     width: 100%;
+  }
+  .main main .description-and-specifications .description p {
+    max-height: 120px;
+  }
+  .main main .description-and-specifications .description p.open {
+    max-height: 1000px;
+  }
+  .main main .description-and-specifications .description button.show-more-btn {
+    display: flex;
   }
 }
