--- a/styles/product.scss
+++ b/styles/product.scss
@@ -384,6 +384,10 @@ $border-color: rgba(54, 54, 54, 0.14);
                     }
                 }
             }
+            .comments-section {
+                display: flex;
+                flex-direction: column;
+            }
         }
     }
 }
