--- a/styles/product.scss
+++ b/styles/product.scss
@@ -1,5 +1,113 @@
 $border-color: rgba(54, 54, 54, 0.14);
 
+.submit-comment-box {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1503;
+    .box {
+        background-color: white;
+        border-radius: 11px;
+        width: 50%;
+        height: 80%;
+        overflow: auto;
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid $border-color;
+            position: static;
+            padding: 10px 5%;
+            h5 {
+                color: var(--errors-alerts-color);
+                font-size: 1.3em;
+            }
+            button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+                img {
+                    padding-top: 5px;
+                    width: 30px;
+                }
+            }
+        }
+        .main {
+            padding: 15px 5%;
+            label {
+                padding: 10px;
+            }
+            textarea {
+                resize: none;
+            }
+            textarea, input {
+                border: 1px solid $border-color;
+                border-radius: 11px;
+                outline: none;
+                padding: 10px 15px;
+                width: 100%;
+                transition: all .5s;
+            }
+            textarea:focus, input:focus {
+                border-color: var(--primary-color);
+            }
+            .positive-points, .negetive-points {
+                .input {
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 10px;
+                    button {
+                        background-color: var(--primary-color);
+                        border: none;
+                        border-radius: 11px;
+                        color: white;
+                        cursor: pointer;
+                        padding: 10px 15px;
+                    }
+                }
+                ul {
+                    list-style: none;
+                    padding: 10px;
+                    li {
+                        display: flex;
+                        justify-content: space-between;
+                        .text {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 10px;
+                        }
+                        button {
+                            background-color: transparent;
+                            border: none;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            > button {
+                background-color: var(--primary-color);
+                border: none;
+                border-radius: 11px;
+                color: white;
+                margin: 15px 0;
+                padding: 10px;
+                width: 100%;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+.submit-comment-box.on {
+    display: flex;
+}
+
+
 .image-viewer {
     display: none;
     flex-direction: column;
