--- a/styles/product.css
+++ b/styles/product.css
@@ -464,6 +464,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .submit-comment-box .box {
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+  }
   .image-viewer img {
     width: 55%;
   }
