--- a/styles/product.scss
+++ b/styles/product.scss
@@ -407,6 +407,13 @@ $border-color: rgba(54, 54, 54, 0.14);
 }
 
 @media screen and (max-width: 768px) {
+    .submit-comment-box {
+        .box {
+            border-radius: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
     .image-viewer {
         img {
             width: 55%;
