--- a/styles/product.scss
+++ b/styles/product.scss
@@ -403,6 +403,13 @@ $border-color: rgba(54, 54, 54, 0.14);
                 }
             }
         }
+        .best-selling-products-in-this-category {
+            h4 {
+                border-right: 4px solid var(--errors-alerts-color);
+                font-size: 1.5em;
+                padding: 5px 10px;
+            }
+        }
     }
 }
 
