--- a/views/products.ejs
+++ b/views/products.ejs
@@ -19,6 +19,28 @@
         <section class="products-section">
           <div class="products">
             <h1>محصولات</h1>
+            <div class="filters">
+              <div class="category">
+                <label for="category">دسته بندی</label>
+                <select name="" id="category">
+                  <option value="electronics">کالای الکترونیک</option>
+                  <option value="electronics">کالای الکترونیک</option>
+                  <option value="electronics">کالای الکترونیک</option>
+                  <option value="electronics">کالای الکترونیک</option>
+                </select>
+              </div>
+              <div class="order-by">
+                <label for="order-by">بر اساس</label>
+                <select name="" id="order-by">
+                  <option value="most-visted">پر بازدید ترین</option>
+                  <option value="best-seller">پرفروش ترین</option>
+                  <option value="newest">جدید ترین</option>
+                  <option value="most-expensive">گران ترین</option>
+                  <option value="the-cheapest">ارزان ترین</option>
+                  <option value="buyers-suggestions">پیشنهادات خریداران</option>
+                </select>
+              </div>
+            </div>
             <div class="products-list row">
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
