--- a/public/styles/products.scss
+++ b/public/styles/products.scss
@@ -8,6 +8,25 @@ $border-color: rgba(0, 0, 0, 0.14);
                     color: var(--primary-color);
                     padding: 15px;
                 }
+                .filters {
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  padding: 10px 5%;
+                  div {
+                    select {
+                      background-color: transparent;
+                      border: none;
+                      padding: 5px;
+                      outline: none;
+                      cursor: pointer;
+                      option:focus {
+                        background-color: var(--primary-color);
+                        color: white;
+                      }
+                    }
+                  }
+                }
                 .products-list {
                     .product-card {
                         border: 1px solid $border-color;
