--- a/public/styles/products.scss
+++ b/public/styles/products.scss
@@ -99,3 +99,23 @@ $border-color: rgba(0, 0, 0, 0.14);
         }
     }
 }
+
+@media screen and (max-width: 425px) {
+  .main {
+    main {
+      .products-section {
+        .products {
+          .filters {
+            flex-direction: column;
+            div {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
