fixed linking problems and now links works

--- a/views/includes/drawer.ejs
+++ b/views/includes/drawer.ejs
@@ -13,15 +13,15 @@
   </div>
   <div class="section-2">
     <div class="auth-links">
-      <a href="/pages/register.html">ثبت نام</a>
-      <a href="/pages/login.html">ورود</a>
+      <a href="/auth/register">ثبت نام</a>
+      <a href="/auth/login">ورود</a>
     </div>
     <div class="action-links">
-      <a href="/pages/cart.html">
+      <a href="/cart">
         <img src="/assets/icons/cart.png" alt="" />
         <span>سبد خرید</span>
       </a>
-      <a href="/pages/favorites.html">
+      <a href="/favorites">
         <img src="/assets/icons/heart.png" alt="" />
         <span>علاقه مندی ها</span>
       </a>
@@ -31,15 +31,15 @@
         <img src="/assets/icons/house.png" alt="" />
         <span>خانه</span>
       </a>
-      <a href="/pages/products.html">
+      <a href="/products">
         <img src="/assets/icons/product.png" alt="" />
         <span>محصولات</span>
       </a>
-      <a href="/pages/support.html">
+      <a href="/support">
         <img src="/assets/icons/support.png" alt="" />
         <span>پشتیبانی</span>
       </a>
-      <a href="/pages/about-us.html">
+      <a href="/about-us">
         <img src="/assets/icons/about-us.png" alt="" />
         <span>درباره ما</span>
       </a>
