--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -56,17 +56,17 @@
     </div>
     <div class="user-actions">
       <div class="action-links">
-        <a class="action-link" href="/pages/favorites.html">
+        <a class="action-link" href="/favorites">
           <img src="/assets/icons/heart.png" alt="" />
         </a>
-        <a class="action-link" href="/pages/cart.html">
+        <a class="action-link" href="/cart">
           <img src="/assets/icons/cart.png" alt="" />
         </a>
       </div>
       <span class="vertical-line"></span>
       <div class="auth-links">
-        <a class="auth-link" href="/pages/register.html">ثبت نام</a>
-        <a class="auth-link" href="/pages/login.html">ورود</a>
+        <a class="auth-link" href="/auth/register">ثبت نام</a>
+        <a class="auth-link" href="/auth/login">ورود</a>
       </div>
     </div>
   </div>
@@ -78,15 +78,15 @@
           <img src="/assets/icons/house.png" alt="" />
           <span>خانه</span>
         </a>
-        <a href="/pages/products.html">
+        <a href="/products">
           <img src="/assets/icons/product.png" alt="" />
           <span>محصولات</span>
         </a>
-        <a href="/pages/support.html">
+        <a href="/support">
           <img src="/assets/icons/support.png" alt="" />
           <span>پشتیبانی</span>
         </a>
-        <a href="/pages/about-us.html">
+        <a href="/about-us">
           <img src="/assets/icons/about-us.png" alt="" />
           <span>درباره ما</span>
         </a>
