--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <div class="main">
       <div class="box">
         <div class="brand">
-          <a class="special" href="#">
+          <a class="special" href="/">
             <img src="/assets/icons/brand.png" alt="">
             <span class="vertical-line"></span>
             <h1>وبسایت فروشگاهی</h1>
@@ -47,7 +47,7 @@
           </div>
           <button type="submit">ورود</button>
         </form>
-        <p>حساب ندارید؟ <a href="/pages/register.html">ساخت حساب</a>.</p>
+        <p>حساب ندارید؟ <a href="/auth/register">ساخت حساب</a>.</p>
         <a href="/">صفحه اصلی</a>
       </div>
     </div>
