--- a/views/products.ejs
+++ b/views/products.ejs
@@ -45,7 +45,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -65,7 +65,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -85,7 +85,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -105,7 +105,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -125,7 +125,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -145,7 +145,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -165,7 +165,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
@@ -185,7 +185,7 @@
               <div
                 class="product-card col-xs-12 col-sm-8 col-md-6 col-lg-3"
               >
-                <a class="special" href="#product">
+                <a class="special" href="/product">
                   <div class="row-1">
                     <img src="/assets/images/croma.png" alt="" />
                   </div>
