--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
     <div class="main">
       <div class="box">
         <div class="brand">
-          <a class="special" href="#">
+          <a class="special" href="/">
             <img src="/assets/icons/brand.png" alt="">
             <span class="vertical-line"></span>
             <h1>وبسایت فروشگاهی</h1>
@@ -77,7 +77,7 @@
           </div>
           <button type="submit">ثبت نام</button>
         </form>
-        <p>حسابی دارید؟ <a href="/pages/login.html">وارد شوید</a>.</p>
+        <p>حسابی دارید؟ <a href="/auth/login">وارد شوید</a>.</p>
         <a href="/">صفحه اصلی</a>
       </div>
     </div>
