--- a/views/includes/products-list.ejs
+++ b/views/includes/products-list.ejs
@@ -4,7 +4,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -23,7 +23,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -42,7 +42,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -61,7 +61,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -80,7 +80,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -99,7 +99,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -118,7 +118,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
@@ -137,7 +137,7 @@
       </div>
       <div class="swiper-slide">
         <div class="product-card">
-          <a class="special" href="#product">
+          <a class="special" href="/product">
             <div class="row-1">
               <img src="/assets/images/croma.png" alt="" />
             </div>
